# TFT-zero

./: .gitignore  AGENTS.md  README.md  loop-run-log.md  pyproject.toml  setup.py  sim_smoke.py
Screenshots/: SOURCES.md
assets/: manifest.json
config/: strategic_tft.ini
docs/: ANTIGRAVITY_JUDGE.md  ARCHITECTURE.md  ARCHIVE_INDEX.md  ASSETS.md  AUTORESEARCH.md  BRANCH_ARCHITECTURE.md  CURRENT_PATCH_METATFT.md  DATA_GENERATION.md  FIGHT_VALUE_MODEL.md  LEGACY_CODE.md  LOOP_SCAFFOLD.md  PROJECT_BRIEF.md  QUALITY_GATE.md  SIMULATOR_ROADMAP.md  STRATEGIC_LANE.md  TRAINING.md  V0_BUILD_PLAN.md
tests/: test_autoresearch.py  test_board.py  test_bots_and_dataset.py  test_checkpoint_guided_mcts.py  test_checkpoint_policy.py  test_combat_eval.py  test_combat_fixtures.py  test_compare_puffer_ppo.py  test_data_integrity.py  test_economy.py  test_env.py  test_fight_model_pipeline.py  test_fight_value_calibration.py  test_fight_value_simulator_adapter.py  test_frozen_lobby_pool_eval.py  test_items.py  test_judge_packet.py  test_lobby_diagnostics.py  test_lobby_env.py  test_masks.py  test_metatft_catalog_encoders.py  test_metatft_training.py  test_puffer4_gpu_trainer.py  test_puffer4_ocean.py  test_puffer_env.py  test_rounds.py  test_sim_smoke_report.py  test_simulator_regression_gate.py  test_stage2_mcts.py  test_stage3_distill.py  test_stage4_dynamics.py  test_strategic_core.py  test_strategic_eval.py  test_strategic_muzero_cache.py  test_strategic_muzero_loop.py  test_strategic_muzero_overnight_trainer.py  test_strategic_muzero_run_loop.py  test_strategic_muzero_train_smoke.py  (+8 more)
(+224 files in other folders)
