[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tft-zero"
version = "0.1.0"
description = "Python-first TFT-like reinforcement-learning simulator prototype."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gymnasium>=1.0.0",
  "numpy>=2.0.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
train = [
  "matplotlib>=3.9.0",
  "pandas>=2.2.0",
  "sb3-contrib>=2.3.0",
  "stable-baselines3>=2.3.0",
  "tensorboard>=2.17.0",
  "torch>=2.4.0",
  "tqdm>=4.66.0",
]
assets = [
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "pillow>=10.4.0",
]

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mini_tft"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
